@@ -339,7 +339,7 @@ public class StendhalRPWorld extends RPWorld {
 
 		String name = "int_" + zone.getID().getID() + "_house_" + dest;
 
-		door.setDestination(name, new Integer(0));
+		door.setDestination(name, Integer.valueOf(0));
 		zone.assignRPObjectID(door);
 		zone.add(door);
 
@@ -348,7 +348,7 @@ public class StendhalRPWorld extends RPWorld {
 		portal.setDestination(zone.getID().getID(), dest);
 		portal.setX(7);
 		portal.setY(14);
-		portal.setIdentifier(new Integer(0));
+		portal.setIdentifier(Integer.valueOf(0));
 		house.assignRPObjectID(portal);
 		house.add(portal);
 
